# tracker

./: NOTES  interface.glade  monitor.config  run-app  run-diagram-test-app  run-tests  tracker.cabal
src/: Diagram.hs  GUI.hs  LogEntryDialog.hs  LogTime.hs  Main.hs  MainWindow.hs  Paths_tracker.hs  Rect.hs  Tracking.hs
src/GUI/: Diagram.hs  LogEntryDialog.hs  MainWindow.hs
src/Geometry/: Rect.hs
src/Tracking/: Persistence.hs
tests/: AllTests.hs  DiagramTestApp.hs  Fixtures.hs
